--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -1,1 +1,31 @@
-<p>sign-up works!</p>
+<body>
+	<div class="box">
+		<form autocomplete="off" >
+			<h2>RENOVAQUEST</h2>
+			<div class="inputBox">
+				<input type="text" name="Username" required>
+				<span>USERNAME</span>
+				<i></i>
+			</div>
+      <div class="inputBox">
+				<input type="text" name="Email" required>
+				<span>EMAIL</span>
+				<i></i>
+			</div>
+			<div class="inputBox">
+				<input type="password" name="Password" required="required">
+				<span>CONTRASEÑA</span>
+				<i></i>
+			</div>
+      <div class="inputBox">
+				<input type="url" name="Image" required="required">
+				<span>IMAGEN</span>
+				<i></i>
+			</div>
+
+			<button type="button" >REGISTRAR</button>
+		</form>
+	</div>
+
+</body>
+
