--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -24,6 +24,10 @@
 			</div>
 
 			<button type="button" >REGISTRAR</button>
+      <div class="links">
+        <span>¿Ya tienes una cuenta?</span>
+        <a [routerLink]="['/login']">Inicia Sesión</a>
+      </div>
 		</form>
 	</div>
 
