--- a/src/app/pages/login/login.component.css
+++ b/src/app/pages/login/login.component.css
@@ -1,25 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=ZCOOL+KuaiLe&display=swap');
-*
-{
-	margin: 0;
-	padding: 0;
-	box-sizing: border-box;
-  font-family: 'ZCOOL KuaiLe', sans-serif;
-}
-body
-{
+body {
 	display: flex;
 	justify-content: center;
 	align-items: center;
 	min-height: 100vh;
 	flex-direction: column;
 	background: #000000;
-  font-size: 1.5rem;
+	font-size: 1.5rem;
 }
 
-.box
-{
+.box {
 	position: relative;
 	width: 600px;
 	height: 520px;
@@ -27,8 +16,8 @@ body
 	border-radius: 8px;
 	overflow: hidden;
 }
-.box::before
-{
+
+.box::before {
 	content: '';
 	z-index: 1;
 	position: absolute;
@@ -37,11 +26,11 @@ body
 	width: 380px;
 	height: 420px;
 	transform-origin: bottom right;
-	background: linear-gradient(0deg,transparent,#3F1F84,#3F1F84);
+	background: linear-gradient(0deg, transparent, #3F1F84, #3F1F84);
 	animation: animate 6s linear infinite;
 }
-.box::after
-{
+
+.box::after {
 	content: '';
 	z-index: 1;
 	position: absolute;
@@ -50,23 +39,22 @@ body
 	width: 380px;
 	height: 420px;
 	transform-origin: bottom right;
-	background: linear-gradient(0deg,transparent,#3F1F84,#3F1F84);
+	background: linear-gradient(0deg, transparent, #3F1F84, #3F1F84);
 	animation: animate 6s linear infinite;
 	animation-delay: -3s;
 }
-@keyframes animate
-{
-	0%
-	{
+
+@keyframes animate {
+	0% {
 		transform: rotate(0deg);
 	}
-	100%
-	{
+
+	100% {
 		transform: rotate(360deg);
 	}
 }
-form
-{
+
+form {
 	position: absolute;
 	inset: 2px;
 	background: #28292d;
@@ -75,25 +63,25 @@ form
 	z-index: 2;
 	display: flex;
 	flex-direction: column;
-  align-items: center;
+	align-items: center;
 }
-h2
-{
+
+h2 {
 	color: #ffff;
 	font-weight: 500;
 	text-align: center;
 	letter-spacing: 0.1em;
-  font-size: 35px;
+	font-size: 35px;
 
 }
-.inputBox
-{
+
+.inputBox {
 	position: relative;
 	width: 400px;
 	margin-top: 35px;
 }
-.inputBox input
-{
+
+.inputBox input {
 	position: relative;
 	width: 100%;
 	padding: 20px 10px 10px;
@@ -107,8 +95,8 @@ h2
 	transition: 0.5s;
 	z-index: 10;
 }
-.inputBox span
-{
+
+.inputBox span {
 	position: absolute;
 	left: 0;
 	padding: 20px 0px 10px;
@@ -118,15 +106,15 @@ h2
 	letter-spacing: 0.05em;
 	transition: 0.5s;
 }
-.inputBox input:valid ~ span,
-.inputBox input:focus ~ span
-{
+
+.inputBox input:valid~span,
+.inputBox input:focus~span {
 	color: #3F1F84;
 	transform: translateX(0px) translateY(-34px);
 	font-size: 0.75em;
 }
-.inputBox i
-{
+
+.inputBox i {
 	position: absolute;
 	left: 0;
 	bottom: 0;
@@ -139,32 +127,32 @@ h2
 	pointer-events: none;
 	z-index: 9;
 }
-.inputBox input:valid ~ i,
-.inputBox input:focus ~ i
-{
+
+.inputBox input:valid~i,
+.inputBox input:focus~i {
 	height: 55px;
 }
-.links
-{
+
+.links {
 	display: flex;
 	justify-content: space-between;
-  align-items: center;
-  color: white;
-  gap: 25px;
+	align-items: center;
+	color: white;
+	gap: 25px;
 }
-.links a
-{
+
+.links a {
 
 	font-size: 0.9em;
 	text-decoration: none;
 }
+
 .links a:hover,
-.links a:nth-child(2)
-{
+.links a:nth-child(2) {
 	color: #633fa5;
 }
-button[type="button"]
-{
+
+button[type="button"] {
 	border: none;
 	outline: none;
 	padding: 11px 15px;
@@ -174,11 +162,11 @@ button[type="button"]
 	font-weight: 600;
 	width: max-content;
 	margin: 35px 100px;
-  color: #ffff;
+	color: #ffff;
 
 
 }
-button[type="button"]:active
-{
+
+button[type="button"]:active {
 	opacity: 0.8;
 }
