chore: Update dashboard component with additional content

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,2 +1,5 @@
 <app-layout></app-layout>
 <router-outlet></router-outlet>
+<h2>me gustas Lorem ipsum dolor sit amet consectetur adipisicing elit. Id deleniti omnis beatae vero perspiciatis
+     perferendis explicabo nobis vel totam obcaecati corporis ipsam, amet nesciunt ex at tempora dolorem numquam in!
+</h2>
