--- a/src/app/pages/dashboard/dashboard.component.css
+++ b/src/app/pages/dashboard/dashboard.component.css
@@ -2,14 +2,7 @@ body {
      background-color: #1370cc;
 }
 
-.layout {
-     width: 280px;
-}
-
-.dashboard {
-     margin: 0 auto;
-     padding: 20px;
-     background-color: #fff;
-     border-radius: 5px;
-     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+.dash {
+     display: flex;
+     gap: 3rem;
 }
