--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -1,5 +1,13 @@
-<app-layout></app-layout>
-<router-outlet></router-outlet>
-<h2>me gustas Lorem ipsum dolor sit amet consectetur adipisicing elit. Id deleniti omnis beatae vero perspiciatis
-     perferendis explicabo nobis vel totam obcaecati corporis ipsam, amet nesciunt ex at tempora dolorem numquam in!
-</h2>
+<div class="dash">
+     <div>
+          <app-layout></app-layout>
+     </div>
+     <div>
+          <h2>me gustas Lorem ipsum dolor sit amet consectetur adipisicing elit. Id deleniti omnis beatae vero
+               perspiciatis
+               perferendis explicabo nobis vel totam obcaecati corporis ipsam, amet nesciunt ex at tempora dolorem
+               numquam in!
+          </h2>
+
+     </div>
+</div>
