chore: Update dashboard component with game master and panel routes

--- a/src/app/pages/dashboard/dashboard.component.html
+++ b/src/app/pages/dashboard/dashboard.component.html
@@ -2,12 +2,8 @@
      <div>
           <app-layout></app-layout>
      </div>
-     <div>
-          <h2>me gustas Lorem ipsum dolor sit amet consectetur adipisicing elit. Id deleniti omnis beatae vero
-               perspiciatis
-               perferendis explicabo nobis vel totam obcaecati corporis ipsam, amet nesciunt ex at tempora dolorem
-               numquam in!
-          </h2>
+     <div class="contenido">
+          <router-outlet></router-outlet>
 
      </div>
 </div>
