--- a/src/app/pages/dashboard/layout/layout.component.html
+++ b/src/app/pages/dashboard/layout/layout.component.html
@@ -8,7 +8,7 @@
      <hr>
      <ul class="nav nav-pills flex-column mb-auto">
           <li class="nav-item">
-               <a [routerLink]="['gameMaster', 'game']" class="nav-link link-dark" aria-current="page">
+               <a [routerLink]="['GameMaster']" class="nav-link link-dark" aria-current="page">
                     <svg class="bi me-2" width="16" height="16">
                          <use xlink:href="#home"></use>
                     </svg>
@@ -16,7 +16,7 @@
                </a>
           </li>
           <li>
-               <a [routerLink]="['dashboard', 'dashboard']" class="nav-link link-dark">
+               <a [routerLink]="['Panel']" class="nav-link link-dark">
                     <svg class="bi me-2" width="16" height="16">
                          <use xlink:href="#speedometer2"></use>
                     </svg>
