--- a/src/app/pages/sign-up/sign-up.component.html
+++ b/src/app/pages/sign-up/sign-up.component.html
@@ -13,12 +13,12 @@
 				<i></i>
 			</div>
 			<div class="inputBox">
-				<input type="password" [(ngModel)]="SignUpObj.Password" name="Password" required="required">
+				<input type="password" [(ngModel)]="SignUpObj.Password" name="Password" required>
 				<span>PASSWORD</span>
 				<i></i>
 			</div>
       <div class="inputBox">
-				<input type="text" [(ngModel)]="SignUpObj.Image" name="Image" required="required">
+				<input type="text" [(ngModel)]="SignUpObj.Image" name="Image" required>
 				<span>IMAGE</span>
 				<i></i>
 			</div>
