chore: Update dashboard component layout and styles

--- a/src/app/pages/dashboard/layout/layout.component.html
+++ b/src/app/pages/dashboard/layout/layout.component.html
@@ -3,7 +3,7 @@
           <svg class="bi me-2" width="40" height="32">
                <use xlink:href="#bootstrap"></use>
           </svg>
-          <span class="fs-4">RenovaQuest</span>
+          <h1 class="fs-4">RenovaQuest</h1>
      </a>
      <hr>
      <ul class="nav nav-pills flex-column mb-auto">
