--- a/src/app/pages/dashboard/panel/panel.component.html
+++ b/src/app/pages/dashboard/panel/panel.component.html
@@ -1,33 +1,25 @@
 <div class="container text-center">
-     <div class="row align-items-center">
-          <div class="col">
-               <h1>Create</h1>
-               <select class="form-select" aria-label="Default select example">
+     <div class="row d-flex justify-content-end">
+          <div class="col-4">
+               <h4 class="Create">Selected Entity</h4>
+               <select class="form-select" aria-label="Default select example" [(ngModel)]="selectedEntity"
+                    (change)="onEntityChange()">
                     <option selected>Open this Select Entity</option>
                     <option value="1">Farm</option>
-                    <option value="2">Farmer</option>
+                    <option value="2">FarmType</option>
                     <option value="3">ContactType</option>
-               </select>
-          </div>
-          <div class="col">
-               <h1>Updated</h1>
-               <select class="form-select" aria-label="Default select example">
-                    <option selected>Open this Select Entity</option>
-                    <option value="1">Farm</option>
-                    <option value="2">Farmer</option>
-                    <option value="3">ContactType</option>
-               </select>
-          </div>
-          <div class="col">
-               <h1>Deleted</h1>
-               <select class="form-select" aria-label="Default select example">
-                    <option selected>Open this Select Entity</option>
-                    <option value="1">Farm</option>
-                    <option value="2">Farmer</option>
-                    <option value="3">ContactType</option>
+                    <option value="4">Device</option>
+                    <option value="5">DeviceType</option>
+                    <option value="6">Farmer</option>
+                    <option value="7">EnergyLog</option>
+                    <option value="8">EnergyMeter</option>
                </select>
           </div>
 
-
+     </div>
+     <div>
+          @if (mostrarTabla == true) {
+          mostando tabla
+          }
      </div>
 </div>
