chore: Update dashboard component layout and styles

--- a/src/app/pages/dashboard/gameMaster/gameMaster.component.html
+++ b/src/app/pages/dashboard/gameMaster/gameMaster.component.html
@@ -1,1 +1,63 @@
-<h1>soy el game master </h1>
+<div class="contenedor-info">
+     <img src="https://github.com/mdo.png" alt="">
+     <div class="info">
+          <span>Anderson00</span>
+          <div class="row text-center">
+               <div class="col">
+                    <h3>Total experiencia</h3>
+               </div>
+               <div class="col">
+                    <h3>Logros</h3>
+               </div>
+               <div class="col">
+                    <h3>Level</h3>
+               </div>
+          </div>
+
+     </div>
+</div>
+<div class="contenedor-logros">
+     <a [routerLink]="['Logros']">LOGROS</a>
+     <a [routerLink]="['Partidas']">PARTIDAS</a>
+</div>
+<hr>
+<router-outlet></router-outlet>
+
+Lorem ipsum dolor sit amet consectetur adipisicing elit. Similique tempora ea expedita esse quos praesentium quia
+veritatis delectus. Deleniti sed animi dicta nemo? Iure nobis tenetur, suscipit sunt in fugiat ex obcaecati ab nihil
+ducimus sint deserunt voluptatem quisquam nesciunt aliquam. Impedit reiciendis assumenda minima placeat et maiores porro
+sed excepturi, error saepe, ipsum sit eius eveniet ullam ex libero esse? Culpa magnam doloribus facilis maiores tempora
+ullam distinctio necessitatibus illo pariatur libero, non numquam quibusdam! Eius pariatur quaerat placeat quidem dicta
+distinctio porro sed ex earum! Totam nobis dolorem iste obcaecati qui vitae temporibus iusto error. Dicta, explicabo
+asperiores. Ipsum adipisci ducimus hic vero rem mollitia iusto autem minus dolorum iste voluptates esse minima
+voluptatibus asperiores quo impedit ipsa, eligendi quibusdam est earum voluptatem exercitationem. Ab porro, mollitia vel
+quisquam explicabo nulla atque libero itaque tempore reprehenderit laboriosam? Blanditiis incidunt illum delectus,
+excepturi culpa harum ipsum dolorem inventore repellendus voluptatem consequatur expedita aut praesentium animi error
+dolores deleniti, quos iusto odit nostrum rem dolor! A at pariatur labore impedit recusandae ratione eos magnam
+inventore consequatur sed facere aut necessitatibus quas dolor iure non doloremque, magni, architecto culpa corporis
+expedita? Quam voluptate id animi ut, tenetur quasi aspernatur ipsa. Reprehenderit, veniam aperiam consequuntur adipisci
+voluptate asperiores harum veritatis odit magni hic officiis esse, nam quas minus dolorem similique quo molestias modi
+eaque? Asperiores esse ad odio. Voluptates eligendi adipisci omnis, hic rem eveniet non animi quidem tenetur qui nobis
+porro placeat! Magni autem nesciunt quidem quae nisi quod sit, illo eos inventore assumenda repudiandae debitis aut
+cumque, a harum et officia numquam voluptatum? Illum reprehenderit quod tenetur voluptatem quibusdam molestias minima
+vel odio deleniti expedita id suscipit, distinctio porro similique veniam consequuntur esse facere magni ullam aperiam?
+Reiciendis, magni mollitia! Est quam ea illo. Ipsa, laboriosam eveniet? Dicta repellat culpa aspernatur repellendus
+expedita similique, iusto cum quo, architecto eveniet odit delectus? Temporibus minus culpa aut iste recusandae vitae
+distinctio expedita? Nulla neque, qui inventore laborum tempore architecto voluptatibus, voluptate id ipsum sunt error
+sequi, voluptates reprehenderit earum! Voluptates enim repellendus nisi, culpa qui, iusto dolore voluptatem laboriosam
+magnam totam atque debitis aliquam assumenda fugiat dignissimos ratione odio perspiciatis distinctio molestiae laborum
+sapiente quidem esse! Officia, voluptatum. Obcaecati asperiores veniam soluta nisi ratione praesentium dolor, commodi
+quis qui fuga quaerat saepe modi dolorum minus labore blanditiis aliquam dignissimos totam neque id, exercitationem
+voluptates optio explicabo! Repellat delectus eaque officiis aspernatur optio laborum perferendis esse nostrum,
+cupiditate explicabo quasi nesciunt! Numquam ab dicta veniam, culpa nam magni, magnam, ad accusamus repudiandae
+voluptatem aspernatur. Vel cumque dolores cupiditate nisi magnam animi modi inventore quas doloremque vero commodi
+molestias, et consequuntur quo illum eos autem, amet facere dicta minima. Culpa et velit nam deserunt ducimus facilis
+obcaecati natus consectetur quis asperiores atque itaque provident qui illum sequi non dignissimos modi nostrum,
+molestias quisquam recusandae vitae sed animi fuga! Deleniti inventore beatae nobis iure natus voluptate fugiat
+necessitatibus quidem dignissimos delectus odit amet dolorum nostrum, voluptas ipsam vitae at porro saepe enim eos
+minima? Dolorum, quo ipsam non incidunt expedita debitis quis, consectetur accusantium aspernatur quas neque mollitia,
+sint reiciendis perspiciatis blanditiis quod quos dolore? Aperiam sapiente modi esse itaque adipisci reprehenderit ut,
+recusandae iusto eum expedita ea accusamus fugit tempore quis magnam blanditiis. Nulla est eaque nam accusamus debitis,
+consequatur autem fuga quis iusto nisi. Aliquam id maxime mollitia similique ex inventore, ipsam odio beatae reiciendis
+sit ut quod est vel ullam sed tempore. Consectetur quaerat accusantium nobis quidem laborum? Quaerat est officia at
+nesciunt dolores modi optio nobis ab? Quasi ea vel quidem amet non iure consequatur enim unde similique id. Ipsa, sed.
