--- a/src/app/pages/dashboard/layout/layout.component.css
+++ b/src/app/pages/dashboard/layout/layout.component.css
@@ -1,6 +1,14 @@
 .contenedor-side {
      width: 280px;
-     height: 100vh;
+     height: auto;
      background-color: #f8f9fa;
-     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+     position: sticky;
+     top: 0;
+}
+
+.user {
+     position: fixed;
+     bottom: 0;
+     width: 280px;
+     margin: 10px 0;
 }
