--- a/src/app/pages/dashboard/gameMaster/gameMaster.component.css
+++ b/src/app/pages/dashboard/gameMaster/gameMaster.component.css
@@ -1,3 +1,62 @@
-:host {
-  display: block;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  background: #ffffff;
+  width: 100%;
+  height: 100%;
+}
+
+img {
+  width: 400px;
+  height: 400px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+h3 {
+  font-size: .7rem;
+  color: #000000;
+  margin-top: 20px;
+
+}
+
+hr {
+  width: 100%;
+  height: 1px;
+  background-color: #000000;
+  margin-top: 20px;
+
+}
+
+.contenedor-logros {
+  display: flex;
+  gap: 50px;
+  margin-top: 20px;
+  height: auto;
+
+}
+
+.contenedor-logros>a {
+  text-decoration: none;
+  color: #000000;
+  width: max-content;
+  height: max-content;
+  padding: 5px;
+  font-weight: bold;
+
+}
+
+
+
+.contenedor-info {
+  height: auto;
+  display: flex;
+  gap: 50px;
+}
+
+.info {
+  width: max-content;
+  height: max-content;
+  font-size: 4rem;
 }
