--- a/src/app/pages/dashboard/panel/panel.component.css
+++ b/src/app/pages/dashboard/panel/panel.component.css
@@ -9,3 +9,77 @@
 .Deleted {
      color: rgba(255, 0, 0, 0.447);
 }
+
+button {
+     background-color: #5d5b5b;
+     border: none;
+     border-radius: 5px;
+     padding: 0 1rem 0 1rem;
+     cursor: pointer;
+     transition: background-color 0.3s;
+     margin: 2px;
+     color: white;
+}
+
+.form-select-propio {
+     background-color: #000000;
+     border: 2px solid #ffffff00;
+     border-radius: 5px;
+     padding: 1rem;
+     cursor: pointer;
+     transition: background-color 0.3s;
+     margin: 2px;
+     color: white;
+     font-size: 1rem;
+     width: 100%;
+}
+
+.form-select-propio:focus {
+     background-color: #00000089;
+     border: 2px solid #ffffff00;
+
+}
+
+
+
+.EditBtn {
+     background-color: #5d5b5b;
+     border: none;
+     border-radius: 5px;
+     padding: 0 1rem 0 1rem;
+     cursor: pointer;
+     transition: background-color 0.3s;
+     margin: 2px;
+}
+
+.DeleteBtn {
+     background-color: #5d5b5b;
+     border: none;
+     border-radius: 5px;
+     padding: 0 1rem 0 1rem;
+     cursor: pointer;
+     transition: background-color 0.3s;
+     margin: 2px;
+}
+
+.CreateBtn {
+     background-color: #5d5b5b;
+     border: none;
+     border-radius: 5px;
+     padding: 0 1rem 0 1rem;
+     cursor: pointer;
+     transition: background-color 0.3s;
+     margin: 2px;
+}
+
+.CreateBtn:hover {
+     background-color: #119bd6;
+}
+
+.DeleteBtn:hover {
+     background-color: #bb5252;
+}
+
+.EditBtn:hover {
+     background-color: #51a471;
+}
