--- a/src/app/pages/dashboard/layout/layout.component.html
+++ b/src/app/pages/dashboard/layout/layout.component.html
@@ -44,12 +44,12 @@
           <hr>
           <a href="#" class="d-flex align-items-center link-dark text-decoration-none dropdown-toggle"
                id="dropdownUser2" data-bs-toggle="dropdown" aria-expanded="false">
-               <img src="https://github.com/mdo.png" alt="" width="32" height="32" class="rounded-circle me-2">
-               <strong>Anderson00</strong>
+               <img src="{{user.image}}" alt="" width="32" height="32" class="rounded-circle me-2">
+               <strong>{{user.username}}</strong>
           </a>
           <ul class="dropdown-menu text-small shadow" aria-labelledby="dropdownUser2">
 
-               <li><a class="dropdown-item" href="#">Sign out</a></li>
+               <li><button class="dropdown-item" (click)="Salir()">Sign out</button></li>
           </ul>
      </div>
 </div>
