--- a/src/app/pages/dashboard/gameMaster/gameMaster.component.html
+++ b/src/app/pages/dashboard/gameMaster/gameMaster.component.html
@@ -1,16 +1,19 @@
 <div class="contenedor-info">
-     <img src="{{user.image}}" alt="">
+     <img loading="lazy" src="{{user.image}}" alt="">
      <div class="info">
-          <span>{{user.username}}</span>
+          <span class="userName">{{user.username}}</span>
           <div class="row text-center">
                <div class="col">
-                    <h3>Total experiencia</h3>
+                    <h3>EXPERIENCE</h3>
+                    <p>200 EXP</p>
                </div>
                <div class="col">
-                    <h3>Logros</h3>
+                    <h3>BADGES</h3>
+                    <p>1</p>
                </div>
                <div class="col">
-                    <h3>Level</h3>
+                    <h3>LEVEL</h3>
+                    <p>200 EXP</p>
                </div>
           </div>
 
